# TAFFO-MLIR

./: .gitignore  CMakeLists.txt  README.md  affipy.py  llvm_commit.txt  llvm_compile_flags.txt  run_vra_tests.bash
.github/workflows/: build-and-test.yml
include/: CMakeLists.txt  libaffine.hpp
include/Taffo/: CMakeLists.txt  InferTaffoRangeNtvInterface.h  InferTaffoRangeNtvInterface.td  NtvRangeAnalysis.h  Ops.h  Passes.h  Passes.td  Taffo.td  TaffoDialect.h  TaffoDialect.td  TaffoOps.h  TaffoOps.td  TaffoRangeCommon.h  TaffoTypes.td  Types.h  ValueRangeAnalysisPass.h
include/Taffo/Dialect/: Attributes.h  CMakeLists.txt  OpInterfaces.h  Ops.h  Taffo.h  Taffo.td  TaffoAttributes.td  TaffoDialect.h  TaffoDialect.td  TaffoOps.td  TaffoTypes.td  Types.h
include/Taffo/Interfaces/: CMakeLists.txt  InferTaffoRangeInterface.h  InferTaffoRangeInterface.td  InferTaffoRangeNtvInterface.h  InferTaffoRangeNtvInterface.td
include/Taffo/Transforms/: AffineRangeAnalysis.hpp  CMakeLists.txt  DatatypeInitialization.h  DatatypeOptimization.h  DatatypeOptimizationPass.h  LowerToArithPass.h  NtvRangeAnalysis.h  Passes.h  Passes.td  RaiseToTaffoPass.h  TaffoRangeCommon.h  TaffoToArith.h  ValueRangeAnalysisPass.h
lib/: CMakeLists.txt
lib/Standalone/: CMakeLists.txt
lib/Taffo/: CMakeLists.txt  InferTaffoRangeNtvInterface.cpp  NtvRangeAnalysis.cpp  NtvRangeImpls.cpp  Ops.cpp  TaffoDialect.cpp  TaffoOps.cpp  TaffoRangeCommon.cpp  Types.cpp  ValueRangeAnalysisPass.cpp
lib/Taffo/Dialect/: Attributes.cpp  CMakeLists.txt  OpInterfaces.cpp  Ops.cpp  Taffo.cpp  TaffoDialect.cpp  Types.cpp
lib/Taffo/Interfaces/: CMakeLists.txt  InferTaffoRangeInterface.cpp  InferTaffoRangeNtvInterface.cpp
lib/Taffo/Transforms/: AffineRangeAnalysis.cpp  CMakeLists.txt  DatatypeInitialization.cpp  DatatypeOptimization.cpp  DatatypeOptimizationPass.cpp  LowerToArithPass.cpp  NtvRangeAnalysis.cpp  RaiseToTaffoPass.cpp  TaffoRangeCommon.cpp  TaffoToArith.cpp  ValueRangeAnalysisPass.cpp  libaffine.cpp
scripts/: affipy.py  run_vra_tests.bash
taffo-opt/: CMakeLists.txt  taffo-opt.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Standalone/: dummy.mlir
test/Taffo/: convergant_loop.mlir  convergant_loop2.mlir  denormal.mlir  div_test.mlir  dummy.mlir  ex37_paper.mlir  ex45_paper.mlir  ex46_paper.mlir  ex47_paper.mlir  for2.mlir  mult.mlir  sumreduce.mlir  test1.mlir  test2.mlir  test3.mlir  test4.mlir  test5.mlir  test6.mlir  test7.mlir  test8.mlir  test9.mlir
test/TaffoBenchmarks/: matmul.mlir
test/libaffine/: CMakeLists.txt  compare_affine_vs_boost.cpp
